--- a/css/style.css
+++ b/css/style.css
@@ -1337,6 +1337,14 @@ h6 {
      object-fit: cover;
 }
 
+.body-page-video__video iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
 .body-page-video__title {
   font-size: 1.5rem;
   line-height: 1.0833333333;
